# ADHD

./: .gitignore  ADHD.ipynb  ADHD.md  ADHD_Terpenes-review1.md  ADHD_Terpenes.md  META-METHODS.mmd  README.md  adhd-metastudy.inq  index.html  inquiro.html  inquiry-graph.inq  meta-methods.html  meta-template.md  meta.md  product.html  study-methods.html  study.template.md  styles.css
githooks/: pre-push
logs/: .1047c7014e6178cdd2968df32705825ada9f9e23-audit.json
notebooks/: ADHD_RAG_Workbench.ipynb
research/: README.md
research/corpus/: README.md
research/rag/: README.md
research/rag/pipelines/: local_chroma.py
schemas/: metastudy.schema.json  terpene-literature-review.schema.json
scripts/: check_mermaid.py  generate_reports.py  main.js  rag_ingest.py  rag_utils.py
server/: pyproject.toml
