[tool.poetry]
name = "adhd-server"
version = "0.1.0"
description = "FastAPI backend for ADHD inquiry workspace"
authors = ["Torpedia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
python-multipart = "^0.0.9"
pydantic = "^2.6.4"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
faiss-cpu = "^1.7.4"
numpy = "^1.26.4"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^2.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
